[package]
name = "disjoint-borrow"
version = "0.1.0"
authors = ["Mike Pedersen <mike@mikepedersen.dk>"]
edition = "2018"
categories = ["no-std", "rust-patterns"]
license = "MIT"

[badges]
travis-ci = { repository = "noctune/disjoint-borrow" }

[dev-dependencies]
compiletest_rs = { version = "0.3.22", features = [ "stable" ] }