[package]
name = "disjoint-borrow"
description = "Disjoint mutable borrows of slices"
version = "0.1.1"
authors = ["Mike Pedersen <mike@mikepedersen.dk>"]
edition = "2018"
categories = ["no-std", "rust-patterns"]
license = "MIT"
repository = "https://github.com/noctune/disjoint-borrow"

[badges]
travis-ci = { repository = "noctune/disjoint-borrow" }

[dev-dependencies]
trybuild = "1.0.11"